<resources>
    <string name="app_name">ACM_app</string>
    <string name="welcome">Welcome Back,</string>
    <string name="dashboard">Dashboard</string>
    <string name="requests">Requests</string>
    <string name="ideas">Ideas</string>
    <string name="core_members">Core\nCommittee\nMembers</string>

    <string name="welcome_slider_1_text">Pitch your idea and add interested people to your project</string>
    <string name="welcome_slider_1_header">Idea</string>
    <string name="welcome_slider_2_text">Get to see all Core members\' details in one place</string>
    <string name="welcome_slider_2_header">Members</string>
    <string name="welcome_slider_3_text">Get notified about progress and get invites from others</string>
    <string name="welcome_slider_3_header">Collaborate</string>
    <string name="Continue">Continue</string>
    <string name="Skip">Skip</string>

    <string name="dashboard_fake_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_account">No Account</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://auth.expo.io/.well-known/assetlinks.json\" }]</string>
    <string name="update">Update</string>
    <string name="basic">Basic</string>
    <string name="accounts">Accounts</string>
    <string name="name">Name</string>
    <string name="projectStatus">Status</string>
    <string name="required_field_error">This field is required</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="password_weak_error">Minimum password length is 6</string>
    <string name="notifications">notifications</string>
    <string name="events">Events</string>
    <string name="check_project">Check Project</string>
    <string name="acm_internal_ecosystem">ACM Internal Ecosystem</string>
    <string name="project_invite">invites you to project %s</string>
    <string name="swipe_left_to_reject">Swipe left to reject</string>
    <string name="swipe_right_to_accept">Swipe right to accept</string>
    <string name="sign_out">Sign Out</string>
    <string name="cli_for_geeks">CLI for Geeks</string>
    <string name="set_the_password_to_use_with_the_cli">Set the password to use with the CLI</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="user_settings">User Settings</string>
    <string name="cli_password">CLI Password</string>
    <string name="search_for">Search for \"%s\"</string>
    <string name="ideation">Idea</string>
    <string name="implementation">Project</string>
    <string name="completed">Product</string>
    <string name="my_projects">My</string>
    <string name="projects">Projects</string>
    <string name="members">Members</string>
    <string name="invites">Invites</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="unable_to_fetch">Unable to Fetch</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="founder">Founder</string>
    <string name="member">Member</string>
    <string name="save">Save</string>

</resources>