<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.text.TextUtils" />
        <import type="com.acmvit.acm_app.R" />
        <variable
            name="viewmodel"
            type="com.acmvit.acm_app.ui.profile.CLIPasswordViewModel" />

    </data>

    <ScrollView
        android:id="@+id/cli_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSurfaceLight">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_pwd"
                style="@style/text_input_layout_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:errorText="@{viewmodel.isWeakPwdError ? R.string.password_weak_error : 0}"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/textView11">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="25"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.password}"
                    android:textColor="#B9D3D6" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_confirm_pwd"
                style="@style/text_input_layout_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="32dp"
                android:hint="@string/confirm_password"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorText="@{viewmodel.isMismatchError ? R.string.password_mismatch_error : 0}"
                app:layout_constraintBottom_toTopOf="@+id/btn_set"
                app:layout_constraintEnd_toEndOf="@+id/input_pwd"
                app:layout_constraintStart_toStartOf="@+id/input_pwd"
                app:layout_constraintTop_toBottomOf="@+id/input_pwd"
                app:layout_constraintVertical_bias="0.0">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:singleLine="true"
                    android:text="@={viewmodel.confirmPassword}"
                    android:textColor="#B9D3D6" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:maxHeight="180dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_geek_dev" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/cli_for_geeks"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/imageView7" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_the_password_to_use_with_the_cli"
                android:textColor="@color/darkGrey"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <Button
                android:id="@+id/btn_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/set"
                android:backgroundTint="@color/colorPrimaryDark"
                android:enabled="@{viewmodel.isPwdValid}"
                android:onClick="@{() -> viewmodel.setPassword()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/input_confirm_pwd" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="@{() -> viewmodel.dismissDialog()}"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_set"
                app:layout_constraintEnd_toStartOf="@+id/btn_set"
                app:layout_constraintTop_toTopOf="@+id/btn_set" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>