<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.acmvit.acm_app.R" />
        <import type="android.text.TextUtils" />
        <variable
            name="viewmodel"
            type="com.acmvit.acm_app.ui.profile.EditProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_ripple"
            android:padding="8dp"
            android:src="@drawable/ic_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/inter_font"
            android:includeFontPadding="false"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/backButton" />

        <ScrollView
            android:id="@+id/edit_profile_scrollview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/root_ml"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingBottom="16dp"
                tools:context=".ui.profile.EditProfileFragment">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_name"
                    style="@style/text_input_layout_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    app:counterEnabled="true"
                    android:textColorHint="#99FFFFFF"
                    app:counterMaxLength="25"
                    app:errorText="@{TextUtils.isEmpty(viewmodel.name) ? R.string.required_field_error : 0}"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="@+id/guideline4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="25"
                        android:singleLine="true"
                        android:text="@={viewmodel.name}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_description"
                    style="@style/text_input_layout_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/projectStatus"
                    android:textColorHint="#99FFFFFF"
                    app:counterEnabled="true"
                    app:counterMaxLength="40"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/input_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions|textFilter"
                        android:maxLength="40"
                        android:text="@={viewmodel.disp}"
                        android:textColor="#FFFFFF" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="250dp" />

                <Button
                    android:id="@+id/update_btn"
                    android:layout_width="0dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:enabled="@{!TextUtils.isEmpty(viewmodel.name)}"
                    android:onClick="@{() -> viewmodel.updateUser()}"
                    android:text="@string/update"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/input_description" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.024330901" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.96107054" />

                <TextView
                    android:id="@+id/textView14"
                    style="@style/edit_profile_section_header_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/user_settings"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/accounts_layout" />

                <ImageView
                    android:id="@+id/dp"
                    android:layout_width="180dp"
                    android:layout_height="0dp"
                    app:imageUrl="@{viewmodel.dp}"
                    app:circleCrop="@{true}"
                    app:layout_constraintBottom_toTopOf="@+id/guideline4"
                    app:layout_constraintDimensionRatio="h,1:1"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/edit_profile_section_header_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/basic"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/accounts"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/update_btn"
                    style="@style/edit_profile_section_header_style" />

                <ImageView
                    android:id="@+id/edit_dp"
                    android:layout_width="45dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="3dp"
                    android:elevation="2dp"
                    android:onClick="@{() -> viewmodel.startPicChooserActivity()}"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="@+id/dp"
                    app:layout_constraintStart_toStartOf="@+id/dp"
                    app:srcCompat="@drawable/ic_baseline_edit_24" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:elevation="1dp"
                    app:layout_constraintBottom_toBottomOf="@+id/dp"
                    app:layout_constraintEnd_toEndOf="@+id/dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/dp"
                    app:layout_constraintTop_toTopOf="@+id/dp"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/circular_overlay" />

                <LinearLayout
                    android:id="@+id/accounts_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                    <include
                        android:id="@+id/discord_acc"
                        layout="@layout/accounts_view"
                        android:onClick="@{() -> viewmodel.signInWithDiscord()}"
                        app:accountImg="@{R.drawable.ic_discord}"
                        app:accountName="@{viewmodel.accounts.discord.username}" />

                    <include
                        android:id="@+id/github_acc"
                        layout="@layout/accounts_view"
                        android:onClick="@{() -> null}"
                        app:accountImg="@{R.drawable.ic_github}"
                        app:accountName="@{null}" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/user_settings_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/textView14"
                    app:layout_constraintTop_toBottomOf="@+id/textView14">

                    <include
                        android:id="@+id/cli_setting"
                        layout="@layout/user_settings_view"
                        android:onClick="@{() -> viewmodel.setCliPassword()}"
                        app:settingImg="@{R.drawable.ic_cli}"
                        app:settingName="@{R.string.cli_password}" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>